[package]
name = "yew-ui"
version = { workspace = true }
edition =  { workspace = true }
# license =  { workspace = true }
repository =  { workspace = true }
description =  { workspace = true }
authors = { workspace = true } 
readme = "../README.md"
license = "../LICENSE.txt"

[dependencies]
yew =  { workspace = true }
gloo =  { workspace = true }
