[package]
name = "yew_ui"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yndgroup/yew-ui"    
description = "A collection of UI components for yew."
authors = ["yangdaqiong <ydaqiong@gmail.com>"] 

[dependencies]
yew = { version = "0.21", features = ["csr"] }
gloo = "0.11.0"
